file image link edit

--- a/css/app-content.css
+++ b/css/app-content.css
@@ -97,7 +97,7 @@ h5, h6 {
 
 /* --- Posts --- */
 .post-content img {
-    max-width:90vw;
+    max-width:100%;
 }
 .post-title {
     font-weight: 400;
@@ -124,7 +124,17 @@ h5, h6 {
         background-color: #580c71;
         color: #ffdada;
     }
-
+blockquote{
+    border-left: 3px solid #ccc;
+    margin: 0;
+    background-color: #9a9a9a63;
+    font-family: monospace;
+    font-size: 125%;
+}
+blockquote > p{
+    padding: .6rem 1.25rem;
+}
+    
 /* Main Page */
 .main-title {
     margin: -1.1rem -2.25rem;
